removed testing jwt key

--- a/server/appsettings.json
+++ b/server/appsettings.json
@@ -10,7 +10,7 @@
     },
     "AllowedHosts": "*",
     "JwtSettings": {
-        "Key": "ThisIsJustAReallyLongTestingKeySoMyProgramDoesntFreakOut",
+        "Key": "",
         "Issuer": "server",
         "Audience": "client"
     }
